--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,28 +8,22 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-      
-      - name: Setup nodejs
-        uses: actions/setup-node@v4
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-node@v4
         with:
           node-version: 20
-      
-      - name: Install dependencies
-        run: npm install
-      
-      - name: Build application
-        run: npm start
-  cache:
-    needs: build
-    runs-on: ubuntu-latest
 
-    steps:
-      - name: Cache npm modules
+      - name: Cache npm
         uses: actions/cache@v4
         with:
           path: ~/.npm
           key: ${{ runner.os }}-npm-${{ hashFiles('package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-npm-
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Run CI test
+        run: npm start
