--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -43,18 +43,23 @@ jobs:
   test:
     needs: build
     runs-on: ubuntu-latest
-
+  
     steps:
       - name: Run container
         run: |
           docker run -d -p 3000:3000 \
             --name test-app \
             ${{ secrets.DOCKERHUB_USERNAME }}/node-hello:${{ needs.build.outputs.image-tag }}
-
+  
       - name: Smoke test
         run: |
-          sleep 3
-          curl -f http://localhost:3000
-
+          for i in {1..10}; do
+            curl -f http://localhost:3000 && exit 0
+            sleep 2
+          done
+          docker logs test-app
+          exit 1
+  
       - name: Cleanup
         run: docker rm -f test-app
+
