Update master branch to master1 in CI pipeline

--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -2,7 +2,7 @@ name: Docker CI Pipeline
 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "master1" ]
   pull_request:
 
 env:
@@ -58,4 +58,5 @@ jobs:
   
       - name: Cleanup
         run: docker rm -f test-app
+
 
